--- a/Projects/Eclipse/MPU6050Read/.project
+++ b/Projects/Eclipse/MPU6050Read/.project
@@ -52,6 +52,11 @@
 			<locationURI>PARENT-3-PROJECT_LOC/Src/Tools/MPU6050/MPU6050App.cpp</locationURI>
 		</link>
 		<link>
+			<name>SensorFusion.cpp</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/Src/Apps/SensorFusion.cpp</locationURI>
+		</link>
+		<link>
 			<name>Src</name>
 			<type>2</type>
 			<locationURI>virtual:/virtual</locationURI>
