--- a/Projects/Eclipse/Quadcopter/.cproject
+++ b/Projects/Eclipse/Quadcopter/.cproject
@@ -32,6 +32,7 @@
 								<option id="de.innot.avreclipse.compiler.option.optimize.1857877408" name="Optimization Level" superClass="de.innot.avreclipse.compiler.option.optimize" value="de.innot.avreclipse.compiler.optimize.size" valueType="enumerated"/>
 								<option id="de.innot.avreclipse.compiler.option.incpath.627753195" name="Include Paths (-I)" superClass="de.innot.avreclipse.compiler.option.incpath" valueType="includePath">
 									<listOptionValue builtIn="false" value="&quot;..\..\..\..\Src\Core\cores\arduino&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;..\..\..\..\Src\libraries\SoftwareSerial&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;..\..\..\..\Src\Core\variants\standard&quot;"/>
 								</option>
 								<option id="de.innot.avreclipse.compiler.option.optimize.packstruct.531631321" name="Pack structs (-fpack-struct)" superClass="de.innot.avreclipse.compiler.option.optimize.packstruct" value="false" valueType="boolean"/>
@@ -51,6 +52,7 @@
 									<listOptionValue builtIn="false" value="&quot;..\..\..\..\Src\libraries\Wire\utility&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;..\..\..\..\Src\libraries\Wire&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;..\..\..\..\Src\libraries\Servo&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;..\..\..\..\Src\libraries\SoftwareSerial&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;..\..\..\..\Src\Core\cores\arduino&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;..\..\..\..\Src\Core\variants\standard&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;..\..\..\..\Src\Tools\MPU6050&quot;"/>
