--- a/Projects/Eclipse/Quadcopter/.project
+++ b/Projects/Eclipse/Quadcopter/.project
@@ -37,6 +37,11 @@
 			<locationURI>PARENT-3-PROJECT_LOC/Src/Apps/BLMotorControl.h</locationURI>
 		</link>
 		<link>
+			<name>Callbacks.h</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/Src/Apps/Callbacks.h</locationURI>
+		</link>
+		<link>
 			<name>Filter.cpp</name>
 			<type>1</type>
 			<locationURI>PARENT-3-PROJECT_LOC/Src/Apps/Filter.cpp</locationURI>
@@ -77,6 +82,16 @@
 			<locationURI>PARENT-3-PROJECT_LOC/Src/Apps/PIDControl.h</locationURI>
 		</link>
 		<link>
+			<name>PWMRead.cpp</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/Src/Apps/PWMRead.cpp</locationURI>
+		</link>
+		<link>
+			<name>Pinger.h</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/Src/Apps/Pinger.h</locationURI>
+		</link>
+		<link>
 			<name>Quadcopter.cpp</name>
 			<type>1</type>
 			<locationURI>PARENT-3-PROJECT_LOC/Src/Apps/Quadcopter.cpp</locationURI>
@@ -85,6 +100,11 @@
 			<name>Servo.cpp</name>
 			<type>1</type>
 			<locationURI>PARENT-3-PROJECT_LOC/Src/libraries/Servo/Servo.cpp</locationURI>
+		</link>
+		<link>
+			<name>SoftwareSerial.cpp</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/Src/libraries/SoftwareSerial/SoftwareSerial.cpp</locationURI>
 		</link>
 		<link>
 			<name>Src</name>
