--- a/Projects/Eclipse/Quadcopter/.cproject
+++ b/Projects/Eclipse/Quadcopter/.cproject
@@ -33,7 +33,7 @@
 								<option id="de.innot.avreclipse.compiler.option.incpath.627753195" name="Include Paths (-I)" superClass="de.innot.avreclipse.compiler.option.incpath" valueType="includePath">
 									<listOptionValue builtIn="false" value="&quot;..\..\..\..\Src\Core\cores\arduino&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;..\..\..\..\Src\libraries\SoftwareSerial&quot;"/>
-									<listOptionValue builtIn="false" value="&quot;..\..\..\..\Src\Core\variants\standard&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;..\..\..\..\Src\Core\variants\mega&quot;"/>
 								</option>
 								<option id="de.innot.avreclipse.compiler.option.optimize.packstruct.531631321" name="Pack structs (-fpack-struct)" superClass="de.innot.avreclipse.compiler.option.optimize.packstruct" value="false" valueType="boolean"/>
 								<option id="de.innot.avreclipse.compiler.option.optimize.shortenums.1736454488" name="Short enums (-fshort-enums)" superClass="de.innot.avreclipse.compiler.option.optimize.shortenums" value="false" valueType="boolean"/>
@@ -54,7 +54,7 @@
 									<listOptionValue builtIn="false" value="&quot;..\..\..\..\Src\libraries\Servo&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;..\..\..\..\Src\libraries\SoftwareSerial&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;..\..\..\..\Src\Core\cores\arduino&quot;"/>
-									<listOptionValue builtIn="false" value="&quot;..\..\..\..\Src\Core\variants\standard&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;..\..\..\..\Src\Core\variants\mega&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;..\..\..\..\Src\Tools\MPU6050&quot;"/>
 								</option>
 								<option id="de.innot.avreclipse.cppcompiler.option.optimize.shortenums.1085636883" name="Short enums (-fshort-enums)" superClass="de.innot.avreclipse.cppcompiler.option.optimize.shortenums" value="false" valueType="boolean"/>
@@ -76,7 +76,7 @@
 									<listOptionValue builtIn="false" value="&quot;..\..\..\..\Bin\AVRCore&quot;"/>
 								</option>
 								<option id="de.innot.avreclipse.cpplinker.option.nosyms.369928957" name="Omit Symbols (-s)" superClass="de.innot.avreclipse.cpplinker.option.nosyms" value="false" valueType="boolean"/>
-								<option id="de.innot.avreclipse.cpplinker.option.mrelax.1357143212" name="Relax branches (-mrelax)" superClass="de.innot.avreclipse.cpplinker.option.mrelax" value="false" valueType="boolean"/>
+								<option id="de.innot.avreclipse.cpplinker.option.mrelax.1357143212" name="Relax branches (-mrelax)" superClass="de.innot.avreclipse.cpplinker.option.mrelax" value="true" valueType="boolean"/>
 								<inputType id="de.innot.avreclipse.tool.cpplinker.input.326143960" name="OBJ Files" superClass="de.innot.avreclipse.tool.cpplinker.input">
 									<additionalInput kind="additionalinputdependency" paths="$(USER_OBJS)"/>
 									<additionalInput kind="additionalinput" paths="$(LIBS)"/>
@@ -117,4 +117,5 @@
 			<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId="de.innot.avreclipse.core.AVRGCCManagedMakePerProjectProfileC"/>
 		</scannerConfigBuildInfo>
 	</storageModule>
+	<storageModule moduleId="org.eclipse.cdt.internal.ui.text.commentOwnerProjectMappings"/>
 </cproject>
