--- a/Projects/Eclipse/Quadcopter/.project
+++ b/Projects/Eclipse/Quadcopter/.project
@@ -42,6 +42,11 @@
 			<locationURI>PARENT-3-PROJECT_LOC/Src/Apps/Callbacks.h</locationURI>
 		</link>
 		<link>
+			<name>CommandCtrl.h</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/Src/Apps/CommandCtrl.h</locationURI>
+		</link>
+		<link>
 			<name>Filter.cpp</name>
 			<type>1</type>
 			<locationURI>PARENT-3-PROJECT_LOC/Src/Apps/Filter.cpp</locationURI>
@@ -95,6 +100,16 @@
 			<name>Quadcopter.cpp</name>
 			<type>1</type>
 			<locationURI>PARENT-3-PROJECT_LOC/Src/Apps/Quadcopter.cpp</locationURI>
+		</link>
+		<link>
+			<name>Quadcopter.h</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/Src/Apps/Quadcopter.h</locationURI>
+		</link>
+		<link>
+			<name>SerialDef.h</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/Src/Apps/SerialDef.h</locationURI>
 		</link>
 		<link>
 			<name>Servo.cpp</name>
