--- a/Projects/Eclipse/AVRCore/.project
+++ b/Projects/Eclipse/AVRCore/.project
@@ -29,7 +29,7 @@
 		<link>
 			<name>arduino</name>
 			<type>2</type>
-			<locationURI>PARENT-4-PROJECT_LOC/Program%20Files%20(x86)/Arduino/hardware/arduino/cores/arduino</locationURI>
+			<locationURI>PARENT-3-PROJECT_LOC/Src/Core/cores/arduino</locationURI>
 		</link>
 	</linkedResources>
 </projectDescription>
